04-networking-and-ingress/ingress-app/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: app1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
